<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginsignup.LoginActivity"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:background="@color/cl_background"
        android:padding="@dimen/layout_padding_size">

    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/elevation_card_view_size"
            app:cardCornerRadius="@dimen/radius_card_view_size"
            app:cardBackgroundColor="@color/cl_background"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/cvLogin">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_logo"
                android:layout_margin="@dimen/layout_padding_size"/>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cvLogin"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterMaxLength="20"
            app:counterEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/tilLoginUsername">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtLoginUsername"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textSize="@dimen/edt_txt_size"
                android:hint="@string/edtLoginUsername"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilLoginUsername"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:id="@+id/tilLoginPassword"
            app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edt_txt_size"
                android:hint="@string/edtLoginPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/btnLoginConfirm"
            android:layout_width="@dimen/btn_size"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginConfirm"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_btn_confirm"
            android:textColor="@color/cl_background"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="@dimen/btn_txt_size"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"/>

    <TextView
            android:text="@string/tvLoginSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoginSignUp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20dp"
            android:padding="@dimen/layout_padding_size"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <CheckBox
            android:text="@string/cbLoginRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/tilLoginPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:ignore="HardcodedText"/>

</android.support.constraint.ConstraintLayout>